--- a/JS07 Fetch y Web APIs/styles/main.css
+++ b/JS07 Fetch y Web APIs/styles/main.css
@@ -1,7 +1,7 @@
 body {
     background-color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 0;
     padding: 0;
     display: flex;
@@ -11,7 +11,8 @@ body {
     text-align: center;
 }
 
-.counter-container {
+.container {
+    margin: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,13 +22,13 @@ body {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
-button {
+button, input[type=submit] {
+    margin: 5px;
     font-weight: bold;
     background-color: #f8f9fa;
     font-size: 1rem;
     border-radius: 10%;
     padding: 8px;
-    width: 50px;
     min-height: 30px;
     border: 0px solid transparent;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
